@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020171122"
-#define public MagickPackageReleaseDate "snapshot-20171122"
+#define public MagickPackageVersionAddendum ".020171202"
+#define public MagickPackageReleaseDate "snapshot-20171202"
