@@ -35,6 +35,15 @@
 <div class="document">
 
 
+<p>2017-12-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/pwp.c (ReadPWPImage): Eliminate dereference of null image
+pointer.  Addresses CVE-2017-11640.  Also address access to
+uninitialized memory.  Problem was reported via email from Petr
+Gajdos on Wed, 29 Nov 2017.</li>
+</ul>
+</blockquote>
 <p>2017-11-22  Fojtik Jaroslav  &lt;<a class="reference external" href="mailto:JaFojtik&#37;&#52;&#48;seznam&#46;cz">JaFojtik<span>&#64;</span>seznam<span>&#46;</span>cz</a>&gt;</p>
 <blockquote>
 <ul class="simple">
